# nim-proxy

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  fuzz.yml  release.yml  scorecard.yml
design/config-store/: PLAN.md
design/config-store/prototype/: LineChart.dc.html  NIM Proxy Dashboard.dc.html
design/dashboard-redesign/: NIM Proxy Dashboard.dc.html  PLAN.md  README.md  SortTable.dc.html
docs/superpowers/plans/: 2026-07-16-request-deadline.md
docs/superpowers/specs/: 2026-07-16-request-deadline-design.md
examples/: README.md  opencode.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: config_roundtrip.rs  sanitize_label.rs  sse_scan.rs
fuzz/seeds/config_roundtrip/: store.json
fuzz/seeds/sanitize_label/: hostile  model-id  model-with-colon
fuzz/seeds/sse_scan/: malformed  stream-with-usage  truncated-mid-json
knowledge/: index.md  log.md
knowledge/architecture/: client-auth.md  dashboard.md  dispatcher.md  governor.md  index.md  key-pool.md  metrics-history.md  streaming-pipeline.md
knowledge/decisions/: auth-posture-and-dashboard-password.md  dashboard-operator-console-redesign.md  distroless-scratch-image.md  explicit-request-deadline.md  global-fifo-dispatcher.md  history-retention-days-not-size.md  index.md  input-sanitizing-and-xss.md  request-shape-metrics.md  sliding-window-not-token-bucket.md  sse-heartbeats-for-rate-waits.md  sticky-affinity-with-spillover.md  ui-managed-config-store.md  usage-injection-auto-fallback.md  window-jitter-margin.md
knowledge/ops/: capacity-math.md  configure-env.md  deploy-docker.md  index.md  release.md  sharing-with-friends.md
knowledge/research/: index.md  nim-free-tier-40rpm-no-credits.md  nim-kv-cache-reuse.md  nim-models-endpoint-schema.md
knowledge/testing/: index.md  test-strategy.md
scripts/: loadtest.py  mock_nim.py
src/: auth.rs  config.rs  dashboard.html  dispatch.rs  governor.rs  history.rs  lib.rs  main.rs  pool.rs  proxy.rs  settings.rs  setup.html
tests/: e2e.rs
tests/support/: mod.rs
