[package]
name = "nim-proxy"
version = "0.1.0"
edition = "2021"
description = "Rate-limit-aware OpenAI-compatible proxy for NVIDIA NIM with multi-key load balancing"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip"] }
serde_json = "1"
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
