[package]
name = "nim-proxy"
version = "0.4.0"
edition = "2021"
description = "Rate-limit-aware OpenAI-compatible proxy for NVIDIA NIM with multi-key load balancing"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip"] }
serde_json = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
# Auth: HMAC-signed session cookies + constant-time secret comparison.
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
getrandom = "0.2"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde_json = "1"
bytes = "1"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
# Optimize for speed (the proxy's job): re-enables inlining/vectorization on the
# JSON-parse and SSE-scan hot paths. lto + strip + codegen-units=1 keep the size
# growth modest against opt-level="z".
opt-level = 3
codegen-units = 1
